feat: add artist page
